<resources>
    <string name="app_name">Clean Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_home">Home</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_register_user">Register User</string>
    <string name="title_otp">Verify OTP</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_profile_edit">Profile Edit</string>
    <string name="title_contact_us">Contact US</string>
    <string name="title_about_us">About US</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>

    <string name="title_customer_edit">Customer Edit</string>
    <string name="title_customer_view">Customer View</string>
    <string name="title_lead_details">Lead Details</string>
    <string name="title_lead_edit">Lead Edit</string>
    <string name="title_quotation_search_to_create">Quotation Search</string>
    <string name="title_quotation_create">Quotation Create</string>
    <string name="title_quotation_view">Quotation View</string>
    <string name="title_opportunity_view">Opportunity View</string>
    <string name="title_invoice_view">Invoice View</string>

    <string name="title_country">Country</string>

    <!--    BUTTON      -->
    <string name="btn_login"> LOGIN </string>
    <string name="btn_register_user"> REGISTER USER </string>
    <string name="btn_forgot_password"> FORGOT PASSWORD </string>
    <string name="btn_change_password"> CHANGE PASSWORD </string>
    <string name="btn_resend"> RESEND </string>
    <string name="btn_submit"> SUBMIT </string>
    <string name="btn_edit"> EDIT </string>
    <string name="btn_verify"> VERIFY </string>
    <string name="btn_cancel"> CANCEL </string>
    <string name="btn_payment"> PAYMENT </string>
    <string name="btn_lead_create"> LEAD CREATE </string>

    <string name="btn_customer_create"> CUSTOMER CREATE </string>
    <string name="btn_quotation_create"> QUOTATION CREATE </string>


    <!--    HINT      -->
    <string name="hint_username"> Username </string>
    <string name="hint_firstname"> Firstname </string>
    <string name="hint_lastname"> Lastname </string>
    <string name="hint_address"> Address </string>
    <string name="hint_pincode"> Pincode </string>
    <string name="hint_city"> City </string>
    <string name="hint_company_name"> Company name </string>
    <string name="hint_location"> Location </string>
    <string name="hint_email"> Email </string>
    <string name="hint_password"> Password </string>
    <string name="hint_confirm_password"> Confirm password </string>
    <string name="hint_current_password"> Current Password </string>
    <string name="hint_new_password"> New password </string>
    <string name="hint_new_confirm_password"> New confirm password </string>
    <string name="hint_mobile"> Mobile </string>
    <string name="hint_country"> Country </string>
    <string name="hint_search"> Search </string>
    <string name="hint_lead_title"> Lead title </string>
    <string name="hint_select_properties"> Select Properties </string>
    <string name="hint_select_lead_quality"> Select Lead Quality </string>
    <string name="hint_select_opportunity_quality"> Select Opportunity Quality </string>

    <!--    ERROR MESSAGE      -->
    <string name="msg_connection_time_out">Connection time out, please try again</string>
    <string name="no_internet_message">Internet connection is not available!</string>
    <string name="msg_activity_not_found">No activity found to handle this action.</string>
    <string name="msg_server_not_responding">Server is not responding, please try again</string>
    <string name="msg_no_data">No Data</string>
    <string name="msg_select_one_item">Select one item</string>
    <string name="msg_order_not_select">Order not select</string>
    <string name="msg_empty_email">Enter email</string>
    <string name="msg_empty_password">Enter password</string>
    <string name="msg_empty_confirm_password">Enter confirm password</string>
    <string name="msg_empty_username">Enter username</string>
    <string name="msg_empty_mobile">Enter mobile</string>
    <string name="msg_read_file_no">File not read</string>
    <string name="msg_otp_verify_success">OTP verify successful</string>
    <string name="msg_api_call_successful">API Call Successful</string>

    <!--    LABEL MESSAGE      -->
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register">REGISTER</string>
    <string name="or">OR</string>
    <string name="timer">00:00</string>
    <string name="details">DETAILS</string>
    <string name="view">VIEW</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_total">Customer Total</string>
    <string name="customer_id">Customer Id</string>
    <string name="mobile">Mobile</string>
    <string name="city_with_location">City (Location)</string>
    <string name="date_time">Date - Time</string>
    <string name="lead_status">Lead (0 - 0)</string>
    <string name="lead_quality">Lead Quality</string>
    <string name="lead_properties">Lead Properties</string>
    <string name="lead_property_type">Property Type</string>
    <string name="lead_property_name">Property Name</string>
    <string name="edit"> EDIT </string>
    <string name="lead_id">Lead Id</string>
    <string name="lead_create"> LEAD CREATE </string>
    <string name="lead_title"> Lead Title </string>
    <string name="lead_details">LEAD DETAILS</string>
    <string name="customer_detail"> CUSTOMER DETAIL </string>
    <string name="add_new_property">ADD NEW PROPERTY</string>
    <string name="opportunity_quality">Opportunity Quality</string>
    <string name="opportunity_details">OPPORTUNITY DETAILS</string>
    <string name="user_details">USER DETAILS</string>
    <string name="user_id">User Id</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="cleanup_details">CLEANUP DETAILS</string>
    <string name="quotation_id">Quotation Id</string>
    <string name="quotation_last_detail">QUOTATION DETAILS</string>
    <string name="quotation_quality">Quotation Quality</string>
    <string name="quotation_total">Quotation Total</string>
    <string name="quotation_details">QUOTATION DETAILS</string>
    <string name="company_name"> Company Name </string>
    <string name="company_id"> Company Id </string>
    <string name="pay">Pay</string>
    <string name="invoice_id">Invoice Id</string>
    <string name="invoice_quality">Invoice Quality</string>
    <string name="total">Total : </string>
    <string name="module_name">Module Name</string>
    <string name="email"> Email </string>
    <string name="pincode"> Pincode </string>
    <string name="name"> Name </string>

    <string name="dialog_exist"> Exit </string>
    <string name="dialog_cancel"> Cancel </string>
    <string name="dialog_message_app_exist"> Are you want to exit </string>

    <!--    FONT      -->
    <string name="regular_font">fonts/aileron_regular.otf</string>
    <string name="light_font">fonts/aileron_light.otf</string>
    <string name="semibold_font">fonts/aileron_semibold.otf</string>

    <string name="title_activity_navigation">Home</string>

    <!--    DRAWER MENU      -->
    <string name="action_home">Home</string>
    <string name="action_customer">Customer</string>
    <string name="action_customer_create">Customer Create</string>
    <string name="action_lead">Lead</string>
    <string name="action_lead_create">Lead Create</string>
    <string name="action_opportunity">Opportunity</string>
    <string name="action_opportunity_create">Opportunity Create</string>
    <string name="action_invoice">Invoice</string>
    <string name="action_invoice_create">Invoice Create</string>
    <string name="action_quotation">Quotation</string>

    <string name="action_task">Task</string>
    <string name="action_meeting">Meeting</string>

    <string name="action_setting">Setting</string>
    <string name="action_setting_search">Search</string>

    <string name="action_lead_search_to_create"> Lead Create </string>
    <string name="action_quotation_search"> Quotation Search </string>
    <string name="action_quotation_create"> Quotation Create </string>
    <string name="action_task_create"> Task Create </string>
    <string name="action_opportunity_view"> Opportunity View </string>
    <string name="action_quotation_view"> Quotation View </string>
    <string name="action_invoice_view"> Invoice View </string>
    <string name="action_invoice_quotation_view"> Quotation View </string>
    <string name="action_invoice_task_view"> Task View </string>
    <string name="action_invoice_subtask_task_view"> SubTask View </string>
    <string name="action_invoice_meeting_task_view"> Meeting View </string>
    <string name="action_invoice_save"> Invoice Save </string>

    <string-array name="app_name_text_slider">
        <item>Clean Up</item>
        <item>Clean Up</item>
    </string-array>

</resources>
