<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            style="@style/styleTextViewMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/regularSmall"
            android:text="@string/title_customer_edit"
            android:textColor="@color/colorPrimary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_company_name" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtCompanyName"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_firstname" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtFirstName"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_lastname" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtLastName"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_email" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtEmail"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_mobile" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtMobile"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_city" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtCity"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_location" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtLocation"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_address" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtAddress"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/styleTextViewMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/hint_pincode" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appEdtPinCode"
                        style="@style/styleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:lines="1" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/appBtnEdit"
                        style="@style/ButtonTheme"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/huge"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/btn_edit" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>